# HODLCoin

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libhodlcoinconsensus.pc.in
.tx/: config
build-aux/m4/: hodlcoin_find_bdb48.m4  hodlcoin_qt.m4  hodlcoin_subdir_to_include.m4
contrib/: README.md  hodlcoin-qt.pro  hodlcoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  hodlcoin-qt.desktop  hodlcoin-qt.install  hodlcoin-qt.lintian-overrides  hodlcoin-qt.protocol  hodlcoin-tx.install  hodlcoind.bash-completion  hodlcoind.examples  hodlcoind.install  hodlcoind.lintian-overrides  hodlcoind.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  aes.cpp  aes.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  eccryptoverify.cpp  eccryptoverify.h  (+84 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/policy/: fees.cpp  fees.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoingui.cpp  bitcoingui.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  deposittablemodel.cpp  deposittablemodel.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  hodlcoin.cpp  hodlcoin.qrc  hodlcoin_locale.qrc  hodlcoinaddressvalidator.cpp  hodlcoinaddressvalidator.h  hodlcoinamountfield.cpp  hodlcoinamountfield.h  hodlcoingui.cpp  hodlcoingui.h  hodlcoinstrings.cpp  hodlcoinunits.cpp  hodlcoinunits.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  (+69 more)
src/qt/forms/: addressbookpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: hodlcoin_ach.ts  hodlcoin_af_ZA.ts  hodlcoin_ar.ts  hodlcoin_be_BY.ts  hodlcoin_bg.ts  hodlcoin_bs.ts  hodlcoin_ca.ts  hodlcoin_ca@valencia.ts  hodlcoin_ca_ES.ts  hodlcoin_cmn.ts  hodlcoin_cs.ts  hodlcoin_cy.ts  hodlcoin_da.ts  hodlcoin_de.ts  hodlcoin_el_GR.ts  hodlcoin_en.ts  hodlcoin_eo.ts  hodlcoin_es.ts  hodlcoin_es_CL.ts  hodlcoin_es_DO.ts  hodlcoin_es_MX.ts  hodlcoin_es_UY.ts  hodlcoin_et.ts  hodlcoin_eu_ES.ts  hodlcoin_fa.ts  hodlcoin_fa_IR.ts  hodlcoin_fi.ts  hodlcoin_fr.ts  hodlcoin_fr_CA.ts  hodlcoin_gl.ts  hodlcoin_gu_IN.ts  hodlcoin_he.ts  hodlcoin_hi_IN.ts  hodlcoin_hr.ts  hodlcoin_hu.ts  hodlcoin_id_ID.ts  hodlcoin_it.ts  hodlcoin_ja.ts  hodlcoin_ka.ts  hodlcoin_kk_KZ.ts  (+31 more)
src/qt/res/: hodlcoin-qt-res.rc
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: hodlcoinconsensus.cpp  hodlcoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_hodlcoin_NativeSecp256k1.c  org_hodlcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/hodlcoin/: NativeSecp256k1.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hodlcoin-util-test.py  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  (+10 more)
src/test/data/: README.md  hodlcoin-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
(+138 files in other folders)
